--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ Body Content
 <section id="section0" class="header">
     <div class="container">
         <div class="headerInner">
-            <h2> <b class="redd">Текстиль <span style="color:#ffc001">для дома</span></b></h2>
+            <h2> <b class="redd">Текстиль <span style="color:#000000">для дома</span></b></h2>
             <p class="redd">Наша компания производит и продает широкий ассортимент<br> натуральных высококачественных хлопчатобумажных тканей и швейных изделий. </p>
             <div class="row mt-30">
                 <div class="col-md-4 col-sm-6">
